lots of updates from their email notes

--- a/css/theme-base.css
+++ b/css/theme-base.css
@@ -2948,6 +2948,7 @@ footer.background-grey .copyright-content {
     font-weight: 800;
     line-height: 1.1;
     margin-bottom: 20px;
+    font-size: 20px;
 }
 body.device-xs .text-medium,
 body.device-xs .text-medium-light {
