Lots of bug fixes, little updates

--- a/css/color-variations/orange.css
+++ b/css/color-variations/orange.css
@@ -190,6 +190,7 @@ ul.icon-list li i {
 
 .background-colored {
 	background-color: #f58900;
+    margin-bottom: 10px;
 }
 /* ----------------------------------------------------------------
     NPROGRESS
